Fix UserHeaderLoading alignment

--- a/src/components/UserHeaderLoading.less
+++ b/src/components/UserHeaderLoading.less
@@ -11,7 +11,7 @@
   }
 
   &__avatar {
-    margin: 0;
+    margin: 0 20px 0 0 !important;
   }
 }
 
